--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!-- Temporary test -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Login - Quizmania </title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="login-container">
+    <h1>Login / Signup</h1>
+    <input type="text" id="username" placeholder="Enter username" />
+    <button id="loginBtn">Login</button>
+    <p id="msg"></p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
