--- a/home.html
+++ b/home.html
@@ -7,12 +7,11 @@
 </head>
 <body>
   <header>
-    <h1>Quizmania(Software Engineering Quizs) </h1>
-    <button onclick="location.href='creator.html'">Creator Corner</button>
-    <button id="logoutBtn">Logout</button>
-    
+    <h1>Quizmania (Software Engineering Quizzes)</h1>
+    <button onclick="location.href='creator.html'">Creators</button> 
+ 
+    <button onclick="location.href='index.html'">Logout</button>
   </header>
-  
 
   <section class="banner">
     <div class="banner-text">
@@ -33,7 +32,5 @@
       <a href="quiz-django.html" class="quiz-card">Django Quiz</a>
     </div>
   </main>
-
-  <script src="script.js"></script>
 </body>
 </html>
