--- a/quiz-django.html
+++ b/quiz-django.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Django Quiz</title>
   <link rel="stylesheet" href="quiz-django.css" />
 </head>
